# mawi-website

./: combine.yml  combine_static.yml  data.py  index.html  netlify.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
content/: _about_me.yml  _cgv.yml  _contact.yml  _gallery.yml  _map.yml  _metadata.yml  _seo_metadata.yml  _services_prices.yml  _style.css  _testimony_section.yml  base.template.html  cgv-en.html  cgv-en.md  cgv.html  cgv.md  cgv.template.html  en.html  en.md  index.html  index.md  page.template.html  skeleton.template.html
content/admin/: config.yml  index.html
content/js/: script.js
content/partials/: _cgv_nav.html  _footer.html  _head.html  _header.html  _nav.html
content/testimonies/: 01-alan-aude-lyne.yml  02-clare.yml  03-nancy-trey.yml  04-isabel.yml  05-anne-karine.yml  06-sarah.yml  07-cecile.yml  08-laurel.yml  09-melanie.yml  12-a.md
